Changes before presentation

--- a/Presupuestos/Bronze.html
+++ b/Presupuestos/Bronze.html
@@ -6,35 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0" charset="utf-8">
     <meta name="autor" content="Fertspa studios">
     <link href="../stylesheet.css" rel="stylesheet">
+     <!--Inicio Javascript-->
+     <script type="text/javascript" src="script.js"></script>
+     <!--Fin javascript-->
   </head>
   <body>
     <div class="presupuestos">
-    <h1>Bronze</h1>
-    <p>________________________________</p>
-    <h1>Costo total (incluido el programa): US$58,205</h1>
-    <p>Detalles del presupuesto
-	<i>
-	<p>Equipamientos casa central:<br>
-	- PC's: Dell Optiplex 3010 con periféricos y licencias incluidas<br>
-	- Servidor: IBM System X3200 M3<br>
-	___________<br>
-	</p>
-	<p>
-	Equipamientos para operarios y transportistas:<br>
-	- Tablets HP Elitepad<br>
-	___________<br>
-	
-	Para ver las métricas por puntos de función del programa haga click <a style="text-decoration: none; color: gray;" href ="Metricas.xlsx">aquí</a><br>
-	Para mas detalles sobre los productos haga click <a style="text-decoration: none; color: gray;" href ="Equipos.pdf">aquí</a><br>
-	Sobre presupuestos más detallados haga clic <a style="text-decoration: none; color: gray;" href ="Presupuesto Bronze.ods">aquí</a>
-	</p>
-	</i>
-	</p>
-  </div>
-
-    <!--Inicio Javascript-->
-    <script type="text/javascript" src="script.js"></script>
-    <!--Fin javascript-->
-
-   </body> 
+      <h1>Bronze</h1>
+      <p>________________________________</p>
+      <h1>Costo total (incluido el programa): US$45,099</h1>
+      <p>Detalles del presupuesto
+      <i>
+      <p>Equipamientos casa central:<br>
+      - PC's: Dell Optiplex 3010 con periféricos y licencias incluidas<br>
+      - Servidor: IBM System X3200 M3<br>
+      ___________<br>
+      </p>
+      <p>
+      Equipamientos para operarios y transportistas:<br>
+      - Tablets HP Elitepad<br>
+      ___________<br>
+      <br>
+        <a style="text-decoration: none; color: rgb(136, 163, 253);" href ="Metricas.xlsx">Métricas por puntos de función del programa</a><br>
+        <a style="text-decoration: none; color: rgb(136, 163, 253);" href ="Presupuesto Bronze.ods">Presupuesto más detallado</a><br>
+        <a style="text-decoration: none; color: rgb(136, 163, 253);" href ="Equipos.pdf">Detalles sobre los productos</a><br>
+        <a style="text-decoration: none; color: rgb(136, 163, 253);" href ="antel.pdf">Plan de internet empresarial</a>
+      </p>
+      </i>
+      </p>
+    </div>
+  </body> 
 </html>
