--- a/contacto.html
+++ b/contacto.html
@@ -12,13 +12,17 @@
   </head>
   <body>
     <div class="mvisionTxt">
-    <h1>¿Quiénes somos?</h1>
+    <h1>Contacto</h1>
     <p>________________________________</p>
-    <h1>Misión:</h1>
-    <p><i>Nos encargamos de desarrollar software personalizado, para la creación de aplicaciones de calidad dedicadas a facilitar el transporte logístico a nuestros clientes, priorizando un equilibrio entre productividad y facilidad de uso.</i></p>
+    <h1>Dirección</h1>
+    <p><i>Nicolás Piaggio 1156, apto. 4.</i></p>
     <p>________</p>
-    <h1>Visión:</h1>
-    <p><i>Ser líderes en desarrollo de software aplicado al transporte logístico que cumpla estándares de calidad y de soporte.</i></p>
+    <h1>Teléfono</h1>
+    <p>+59895815092</p>
+    <p>________</p>
+    <h1>Mail</h1>
+    <p><i><a style="text-decoration: none; color: rgb(136, 163, 253);" href="mailto:fertspasoftware@gmail.com?Subject=Consulta%20particular.">fertspasoftware@gmail.com</a></i></p>
+    <p>________</p>
     </div>
    </body> 
 </html>
