--- a/index.html
+++ b/index.html
@@ -35,16 +35,15 @@
           <div class = "contenedorBoton">
             <button class="dropContenedor" onclick="mostrarSub('menu3')">Soporte</button>
             <div class="contenedorBoton-content" id="menu3">
-              <a onclick="actualizarIframe('error.html')">Información sobre errores</a>  
+              <a onclick="actualizarIframe('contacto.html')">Contacto</a>
+              <a onclick="actualizarIframe('faq.html')">FAQs</a>  
             </div>
           </div> 
         </div>
       </header>
     </section>
     <!--Fin de barra de menú-->
-    
     <iframe class="contenidos" id="contenidos" width="100%" height="100%" frameborder="0" scrolling="auto" src="contenidoPrincipal.html"></iframe>
-
     <footer>
       <section>© Fertspa Studios SRL - 2019</section>
     </footer>
