--- a/contenidoPrincipal.html
+++ b/contenidoPrincipal.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0" charset="utf-8">
     <meta name="autor" content="Fertspa studios" content="noindex">
     <link href="stylesheet.css" rel="stylesheet">
+    <!--Inicio Javascript-->
+    <script type="text/javascript" src="script.js"></script>
+    <!--Fin javascript-->
   </head>
   <body>
 
@@ -20,13 +23,11 @@
             <h1>¿En búsqueda de software para tu empresa de logística?</h1>
             <p>Logitask es la solución.</p>
 			<p>¿Quieres probar Logitask? Descárgalo <a style="text-decoration: none; color: gray;" href ="Logitask Administrativo (x64).zip">aquí</a><br>(Versión administrativo x64)</p><br>
-			<iframe width="73.9%" height="60%" frameborder="0" src="https://www.youtube.com/embed/QjLNgSNxrA0"></iframe>
+			<iframe width="73.9%" height="60%" frameborder="0" src="https://www.youtube.com/embed/H8ARvnQpW-o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen"></iframe>
 	   </div>
       </section>
     </div>
 
-    <!--Inicio Javascript-->
-    <script type="text/javascript" src="script.js"></script>
-    <!--Fin javascript-->
+    
    </body> 
 </html>
