--- a/faq.html
+++ b/faq.html
@@ -25,7 +25,7 @@
     <p><i>Puede enviarnos un mail mediante: <a style="text-decoration: none; color: rgb(136, 163, 253);" href="mailto:fertspasoftware@gmail.com?Subject=Compra%20de%20servicio.">fertspasoftware@gmail.com</a></i></p>
     <p>________</p>
     <h1>Ya tengo un equipamiento que su presupuesto me ofrece ¿Debo abonarlo?</h1>
-    <p><i>Nuestra principal regla en FERTSPA Studios es brindar la mayor personalización al cliente, por lo tanto, hará falta abonar por ese equipamiento, pero se agregará un 10% por adaptaciones a dicho equipamiento.<br><a style="text-decoration: none; color: rgb(136, 163, 253);" href="mailto:fertspasoftware@gmail.com?Subject=Consulta%20sobre%20presupuesto.">Comuníquese</a> con nosotros y lo ayudaremos!</i></p>
+    <p><i>Nuestra principal regla en FERTSPA Studios es brindar la mayor personalización al cliente, por lo tanto, no hará falta abonar por ese equipamiento, pero se agregará un 10% por adaptaciones a dicho equipamiento.<br><a style="text-decoration: none; color: rgb(136, 163, 253);" href="mailto:fertspasoftware@gmail.com?Subject=Consulta%20sobre%20presupuesto.">Comuníquese</a> con nosotros y lo ayudaremos!</i></p>
     <p>________</p>
     <h1>Necesito que diseñen una aplicación para mi empresa. ¿Dónde me comunico?</h1>
     <p><i>Puede comunicarse con nosotros vía mail: <a style="text-decoration: none; color: rgb(136, 163, 253);" href="mailto:fertspasoftware@gmail.com?Subject=Solicitud%20de%20desarrollo.">fertspasoftware@gmail.com</a></i></p>
