--- a/contenidoPrincipal.html
+++ b/contenidoPrincipal.html
@@ -16,6 +16,35 @@
     <div id="contenidos">
       <div class="img">
         <img id="logoInicio" style="width:50%;" src="Images/logofertspa2.png">
+		<script>
+			function movimientoLogo()
+			{
+			  imagen = document.getElementById('logoInicio');
+			  imagen.style.position= 'absolute'; 
+			  imagen.style.top = posicionTopLogo;
+			  imagen.style.left = '-400px';
+			  imagen.style.visibility='hidden';
+			  movimientoDerecha();
+			} 
+			function movimientoDerecha()
+			{
+				if (parseFloat(imagen.style.left)<=parseFloat(window.outerWidth)/4)
+				{ 
+					imagen.style.left = parseInt(imagen.style.left) + 10 + 'px';
+					imagen.style.visibility = 'visible';
+					time = setTimeout(movimientoDerecha,10);
+				}
+				else
+				pararAnimacion();
+			}
+
+			function pararAnimacion()
+			{
+			  clearTimeout(timer);
+			} 
+			window.addEventListener("resize", movimientoLogo);
+			window.onload = movimientoLogo();
+		</script>
       </div>
       <div class="lineaSeparar"></div>
       <section>
