The site is online again! --> fertspa.duckdns.org

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<div class="infoPopUp">
 			<span class="cerrarPopUp">&times;</span>
 			<p>Fertspa Studios fue una empresa ficticia para el proyecto de pasaje de grado de la Escuela Superior de Informática,
-			por esa misma razón, esta página a partir del 01/12/2019 cerrará permanentemente.<br>
+			todo material visto en este sitio no es oficial y los precios mostrados no son "reales".<br>
 			<br>
 			Si está interesado en el proyecto, o en nuestro equipo, visite nuestro <a style="text-decoration: none; color: gray;" href ="https://github.com/agustin-perez/logitask">repositorio de FERTSPA</a>
 			<br></p>
